--- a/ShoppingCart.html
+++ b/ShoppingCart.html
@@ -6,7 +6,7 @@
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-	<h1>Shopping Cart</h1>
+	<h1>Shopping Cart Example</h1>
 
 	<div>
 		<ul>
